# yolo_inference_comparison

./: .gitignore  README.md  export_pt_to_openvino.py  requirements.txt
cpp_openvino/: CMakeLists.txt  README.txt
cpp_openvino/src/: video_detect_ov.cpp
openvino_models/: README.txt
openvino_models/sack_person_model_best_openvino/: metadata.yaml  sack_person_model_best.xml
openvino_models/yolo11n_openvino_model/: metadata.yaml  yolo11n.xml
openvino_models/yolo26n_openvino/: metadata.yaml
openvino_models/yolo26n_openvino_model/: yolo26n.xml
output/: README.txt
python_openvino/: README.txt  run_video_detect.py
python_yolo/: README.txt  run_video_detect.py
videos/: README.txt
yolo_models/: README.txt
